attempt to fix route problem

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         access-token: ${{ secrets.ACCESS_TOKEN }}
         deploy-branch: master
-        gatsby-args: --prefix-paths
+        #gatsby-args: --prefix-paths
 
