--- a/src/data/author.yaml
+++ b/src/data/author.yaml
@@ -1,7 +1,9 @@
 #TODO(nacho): add profile pic field?
 - id: nacho
   bio: Software Engineer.
+  profilepicture: ../../content/assets/nacho-profile.png
   twitter: "@ignacioamigo"
 - id: franleplant
+  profilepicture: ../../content/assets/franleplant-profile.png
   bio: Software Engineer.
   twitter: "@franleplant"
