--- a/src/data/author.yaml
+++ b/src/data/author.yaml
@@ -4,5 +4,5 @@
   twitter: "@ignacioamigo"
 - id: franleplant
   profilepicture: ../../content/assets/franleplant-profile.png
-  bio: Software Engineer with a degree in Engineering, Woodworker, all things Javascript and Rust.
+  bio: Software developer with a degree in Engineering, Woodworker, all things Javascript, Rust and Software Architecture.
   twitter: "@franleplant"
