--- a/src/data/author.yaml
+++ b/src/data/author.yaml
@@ -1,5 +1,5 @@
 - id: nacho
-  bio: Software Engineer.
+  bio: Software Engineer with a passion on system and software architecture. Other loves include music and video games (and their development).
   profilepicture: ../../content/assets/nacho-profile.png
   twitter: "@ignacioamigo"
 - id: franleplant
