--- a/package.json
+++ b/package.json
@@ -49,8 +49,21 @@
   "devDependencies": {
     "gatsby-transformer-yaml": "2.2.20",
     "gh-pages": "^2.1.1",
+    "husky": ">=1",
+    "lint-staged": ">=8",
     "prettier": "^1.19.1"
   },
   "license": "MIT",
-  "main": "n/a"
+  "main": "n/a",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
