--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "10.0.27",
+    "@emotion/styled": "10.0.27",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.37",
+    "gatsby-plugin-emotion": "4.1.21",
     "gatsby-plugin-feed": "^2.3.22",
     "gatsby-plugin-google-analytics": "^2.1.29",
     "gatsby-plugin-manifest": "^2.2.30",
@@ -44,6 +47,7 @@
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
+    "typography-theme-github": "0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
