--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Node CI
 
-on: [push,pull_request,]
+on: [push,pull_request]
 
 jobs:
   build:
@@ -15,8 +15,10 @@ jobs:
         node-version: 12.x
     - name: npm install, build, and test
       run: |
-        yarn
+        yarn --version
+        yarn install --pure-lockfile
+        npm run test
         npm run build
-        npm test
+
       env:
         CI: true
