--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "prettier --check \"**/*.{js,jsx,json,md}\""
+    "test": "prettier --loglevel=debug --check \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
     "@emotion/core": "10.0.27",
