--- a/src/data/author.yaml
+++ b/src/data/author.yaml
@@ -2,7 +2,9 @@
   bio: Software Engineer with a passion on system and software architecture. Other loves include music and video games (and their development).
   profilepicture: ../../content/assets/nacho-profile.png
   twitter: "ignacioamigo"
+  github: https://github.com/IgnacioAmigo
 - id: franleplant
   profilepicture: ../../content/assets/franleplant-profile.png
   bio: Software developer with a degree in Engineering, Woodworker, all things Javascript, Rust and Software Architecture.
   twitter: "franleplant"
+  github: https://github.com/franleplant
