--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "2.1.21",
     "gatsby-remark-copy-linked-files": "^2.1.31",
+    "gatsby-remark-emojis": "^0.4.2",
     "gatsby-remark-images": "^3.1.34",
     "gatsby-remark-prismjs": "^3.3.25",
     "gatsby-remark-reading-time": "1.1.0",
