--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.6",
+    "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-transformer-yaml": "2.2.20",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
