--- a/package.json
+++ b/package.json
@@ -8,25 +8,32 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "prettier --check \"**/*.{js,jsx,json,md}\""
+    "test": "npm run test:format && npm run build && npm run typecheck && npm run lint",
+    "test:format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
+    "@types/color": "^3.0.1",
+    "@types/typography": "^0.16.3",
     "color": "3.1.2",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-emotion": "4.1.21",
     "gatsby-plugin-feed": "^2.3.22",
     "gatsby-plugin-google-analytics": "^2.1.29",
+    "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.24",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "2.1.21",
     "gatsby-remark-copy-linked-files": "^2.1.31",
@@ -38,7 +45,7 @@
     "gatsby-remark-smartypants": "^2.1.17",
     "gatsby-remark-table-of-contents": "0.0.9",
     "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-remark": "^2.6.39",
+    "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.6",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
@@ -47,17 +54,31 @@
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
+    "typescript": "^3.8.3",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-github": "0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "@types/react-helmet": "^5.0.15",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "gatsby-transformer-yaml": "2.2.20",
     "gh-pages": "^2.1.1",
     "husky": ">=1",
     "lint-staged": ">=8",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.4"
+  },
+  "resolutions": {
+    "unified": "7.1.0",
+    "vfile": "4.0.3",
+    "@types/vfile": "4.0.0"
   },
   "license": "MIT",
   "main": "n/a",
@@ -67,7 +88,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,json,md}": [
+    "*.{js,jsx,ts,tsx,json,md}": [
       "prettier --write",
       "git add"
     ]
