About page improvements

--- a/src/data/author.yaml
+++ b/src/data/author.yaml
@@ -5,6 +5,6 @@
   github: https://github.com/IgnacioAmigo
 - id: franleplant
   profilepicture: ../../content/assets/franleplant-profile.png
-  bio: Software developer with a degree in Engineering, Woodworker, all things Javascript, Rust and Software Architecture.
+  bio: Tech Lead and Software developer with a degree in Engineering. Woodworker, all things Javascript, Rust and Software Architecture.
   twitter: "franleplant"
   github: https://github.com/franleplant
