--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@babel/core": "^7.11.0",
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
     "@types/color": "^3.0.1",
@@ -36,6 +37,7 @@
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "2.1.21",
+    "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.31",
     "gatsby-remark-emojis": "^0.4.2",
     "gatsby-remark-images": "^3.1.34",
@@ -47,8 +49,8 @@
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.6",
-    "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-transformer-yaml": "2.2.20",
+    "graphql": "^14.0.0",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
