--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@babel/compat-data": "^7.11.0",
     "@babel/core": "^7.11.0",
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
