--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Use Node.js 14
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
     - uses: enriikke/gatsby-gh-pages-action@v2
       with:
         access-token: ${{ secrets.ACCESS_TOKEN }}
