--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
     "@types/color": "^3.0.1",
+    "@types/react-dom": "^16.9.8",
     "@types/typography": "^0.16.3",
     "color": "3.1.2",
     "gatsby": "^2.18.4",
