--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-emotion": "4.1.21",
     "gatsby-plugin-feed": "^2.3.22",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.29",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.2.30",
