--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-plugin-offline": "^3.0.24",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-plugin-twitter": "^2.3.12",
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "2.1.21",
