initial inperfect report

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\" \"./*.{js,ts,json,md}\"",
+    "format": "yarn prettier --write ",
+    "prettier": "prettier \"**/*.{js,jsx,ts,tsx,json,md}\" \"./*.{js,ts,json,md}\"",
     "typecheck": "tsc --noEmit",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "npm run test:format && npm run build && npm run typecheck && npm run lint",
-    "test:format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "test:format": "yarn prettier --check"
   },
   "dependencies": {
     "@babel/compat-data": "^7.11.0",
@@ -54,12 +55,14 @@
     "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.6",
     "gatsby-transformer-yaml": "2.2.20",
+    "googleapis": "^66.0.0",
     "graphql": "^14.0.0",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "ts-node": "^9.1.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typescript": "^3.8.3",
