--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
-    "typescript": "^3.8.3",
+    "typescript": "4",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-github": "0.16.19",
