--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@emotion/styled": "10.0.27",
     "@types/color": "^3.0.1",
     "@types/react-dom": "^16.9.8",
-    "@types/typography": "^0.16.3",
     "color": "3.1.2",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.37",
@@ -39,7 +38,6 @@
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-plugin-twitter": "^2.3.12",
     "gatsby-plugin-typescript": "^2.2.0",
-    "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "2.1.21",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.31",
@@ -59,14 +57,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
-    "typescript": "4",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-github": "0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typescript": "4"
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.15",
