--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "10.0.27",
     "@types/color": "^3.0.1",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^10.2.5",
     "color": "3.1.2",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.37",
@@ -34,6 +35,7 @@
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.24",
+    "gatsby-plugin-postcss": "^4.2.0",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-plugin-twitter": "^2.3.12",
@@ -53,10 +55,12 @@
     "gatsby-transformer-sharp": "^2.3.6",
     "gatsby-transformer-yaml": "2.2.20",
     "graphql": "^14.0.0",
+    "postcss": "^8.2.9",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "tailwindcss": "^2.0.4",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typescript": "4"
