--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\" \"./*.{js,ts,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\" \"./*.{js,ts,json,md}\"",
     "typecheck": "tsc --noEmit",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "start": "npm run develop",
@@ -24,7 +24,8 @@
     "@emotion/styled": "10.0.27",
     "@types/color": "^3.0.1",
     "@types/react-dom": "^16.9.8",
-    "@types/typography": "^0.16.3",
+    "autoprefixer": "^10.2.5",
+    "classnames": "^2.3.1",
     "color": "3.1.2",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.37",
@@ -35,11 +36,11 @@
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.24",
+    "gatsby-plugin-postcss": "^4.2.0",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-plugin-twitter": "^2.3.12",
     "gatsby-plugin-typescript": "^2.2.0",
-    "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "2.1.21",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.31",
@@ -55,18 +56,15 @@
     "gatsby-transformer-sharp": "^2.3.6",
     "gatsby-transformer-yaml": "2.2.20",
     "graphql": "^14.0.0",
+    "postcss": "^8.2.9",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
+    "tailwindcss": "^2.0.4",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
-    "typescript": "4",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-github": "0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typescript": "4"
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.15",
